# fdm

./: README.md  fdm.db  main.py  plan.md  progress.md  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/routers/: forecast.py  upload.py
app/services/: forecast.py  parser.py
data/: ~$daily_charge_schedule.xlsx
data_csv/: steel_grade_production.csv
tests/: test_api.py
